--- a/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
+++ b/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/gcm_defaultSenderId,@string/google_storage_bucket,@string/project_id,@string/google_api_key,@string/google_crash_reporting_api_key,@string/google_app_id">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/firebase_database_url,@string/gcm_defaultSenderId,@string/google_storage_bucket,@string/project_id,@string/google_api_key,@string/google_crash_reporting_api_key,@string/google_app_id">
+  <string name="firebase_database_url" translatable="false">https://dday-3456b-default-rtdb.asia-southeast1.firebasedatabase.app</string>
   <string name="gcm_defaultSenderId" translatable="false">466018151661</string>
-  <string name="google_storage_bucket" translatable="false">dday-3456b.appspot.com</string>
+  <string name="google_storage_bucket" translatable="false">dday-3456b.firebasestorage.app</string>
   <string name="project_id" translatable="false">dday-3456b</string>
   <string name="google_api_key" translatable="false">AIzaSyCLOJvpk2mYMnFE-epj_LE40VCxbEDcXTY</string>
   <string name="google_crash_reporting_api_key" translatable="false">AIzaSyCLOJvpk2mYMnFE-epj_LE40VCxbEDcXTY</string>
